virtual thread pool size added.